Correction de l'initialisation des capteurs OHM pour utiliser le constructeur déclaré